--- a/style.scss
+++ b/style.scss
@@ -372,6 +372,7 @@ body {
     box-sizing: border-box;
     background-image: url(img/Mask_Group_contact.svg);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .top__contact_p {
     max-width:55%;
