--- a/style.css
+++ b/style.css
@@ -488,6 +488,7 @@ body {
           box-sizing: border-box;
   background-image: url(img/Mask_Group_contact.svg);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .top__contact_p {
